--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.25.6",
+    "@clerk/nextjs": "^5.7.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.21.0",
     "axios": "^1.5.1",
     "moment": "^2.29.4",
-    "next": "13.5.6",
+    "next": "^14.2.15",
     "nextjs-toploader": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
