--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mongodb+srv://chanitebrandon@gmail.com:Bablefou88@@cluster.mongodb.net/RoadTask?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://Brandon88:Bablefou88@@cluster.mongodb.net/RoadTask?retryWrites=true&w=majority"
