--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-DATABASE_URL="mongodb+srv://Brandon88:Bablefou88@@cluster.mongodb.net/RoadTask?retryWrites=true&w=majority"
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="mongodb+srv://babcodes:Bablefou88@cluster0.s3ykm.mongodb.net/MyTasks?retryWrites=true&w=majority&appName=Cluster0"
